kubernetes/apps/neuvector/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: neuvector
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
